--- a/production_records/templates/add_expense.html
+++ b/production_records/templates/add_expense.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="mb-4">Добавить Запись</h1>
+    <h1 class="mb-4">Добавить ЗAпись</h1>
     <form method="post" action="{% url 'add_expense' %}" class="needs-validation" novalidate>
 
         {% csrf_token %}
